Cicd/sdk versioning improvement (#634)
<!--  Thanks for sending a pull request!  Here are some tips for you:

1. Run unit tests and ensure that they are passing
2. If your change introduces any API changes, make sure to update the
e2e tests
3. Make sure documentation is updated for your PR!

-->
# Description
- Background: we want to use latest merlin-sdk on batch-predictor and
pyfunc-server. Previously we cannot do that because these packages
relies on merlin-sdk versions that have been uploaded to PyPI. The idea
is making the development and pipeline smoother by enabling these
packages to install merlin-sdk from local source if the version is not
yet available on pypi.

# Modifications
- Adjusted `make setup` in `pyfunc-server` and `batch-predictor` to
always build and install `merlin-sdk` to have the latest version
- Automate `merlin-sdk` version requirement to `tag` on pipeline (pypi
release step)

# Tests
- Test github actions pipelines if it's working correctly.

# Checklist
- [x] Added PR label
- [ ] Added unit test, integration, and/or e2e tests
- [x] Tested locally
- [ ] Updated documentation
- [ ] Update Swagger spec if the PR introduce API changes
- [ ] Regenerated Golang and Python client if the PR introduces API
changes

---------

Co-authored-by: Andreas Aji <andreas.aji@gojek.com>

--- a/python/batch-predictor/Makefile
+++ b/python/batch-predictor/Makefile
@@ -6,6 +6,8 @@ PROTOC_PATH ?= protoc  # Default to 'protoc' if PROTOC_PATH is not set
 
 .PHONY: setup
 setup:
+	@pip install pipenv
+	$(MAKE) build_install_sdk
 	@pipenv install --skip-lock -e .[test]
 
 .PHONY: type_check
@@ -34,3 +36,10 @@ proto:
 	fi
 	go install github.com/mitchellh/protoc-gen-go-json@${PROTOC_GEN_GO_JSON_VERSION}
 	@$(PROTOC_PATH) -I=. --python_out=merlinpyspark --mypy_out=merlinpyspark --go_out=pkg/ --go-json_out=pkg/ --go_opt=paths=source_relative spec/*.proto
+
+
+.PHONY: build_install_sdk
+build_install_sdk:
+	cd ../sdk && pip install setuptools setuptools_scm twine wheel
+	cd ../sdk && python setup.py sdist bdist_wheel
+	pipenv run pip install ../sdk/dist/merlin_sdk-0.0.0-py3-none-any.whl
