--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -242,7 +242,7 @@ jobs:
     needs:
       - create-version
       - build-ui
-      - test-api
+      # - test-api
     steps:
       - uses: actions/checkout@v4
       - name: Download UI Dist
