--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -67,6 +67,7 @@ jobs:
         working-directory: ./python/batch-predictor
         run: |
           pip install pipenv==2023.7.23
+          pip install "setuptools>=64,<75" "setuptools_scm>=8" "twine" "wheel"
           make setup
       - name: Run batch-predictor test
         working-directory: ./python/batch-predictor
@@ -98,7 +99,8 @@ jobs:
       - name: Install dependencies
         working-directory: ./python/pyfunc-server
         run: |
-          pip install pipenv==2023.7.23
+          pip install 
+          pip install "setuptools>=64,<75" "setuptools_scm>=8" "twine" "wheel"
           make setup
       - name: Run pyfunc-server test
         working-directory: ./python/pyfunc-server
