feat: add cython to Pipfile

--- a/python/batch-predictor/Makefile
+++ b/python/batch-predictor/Makefile
@@ -40,6 +40,6 @@ proto:
 
 .PHONY: build_install_sdk
 build_install_sdk:
-	cd ../sdk && python -m pip install setuptools setuptools_scm twine wheel Cython
+	cd ../sdk && python -m pip install setuptools setuptools_scm twine wheel
 	cd ../sdk && python setup.py sdist bdist_wheel
 	pipenv run pip install ../sdk/dist/merlin_sdk-0.0.0-py3-none-any.whl
