--- a/python/pyfunc-server/Makefile
+++ b/python/pyfunc-server/Makefile
@@ -18,6 +18,6 @@ benchmark:
 
 .PHONY: build_install_sdk
 build_install_sdk:
-	cd ../sdk && pip install setuptools setuptools_scm twine wheel Cython
+	cd ../sdk && pip install setuptools setuptools_scm twine wheel
 	cd ../sdk && python setup.py sdist bdist_wheel
 	pipenv run pip install ../sdk/dist/merlin_sdk-0.0.0-py3-none-any.whl
