--- a/python/batch-predictor/Pipfile
+++ b/python/batch-predictor/Pipfile
@@ -7,5 +7,5 @@ verify_ssl = true
 merlin-batch-predictor = {editable = true,extras = ["test"],path = "."}
 
 [packages]
+cython = ">=3.0"
 merlin-batch-predictor = {extras = ["test"], file = ".", editable = true}
-cython = "*"
