chore: bump dependency version to support python 3.13

--- a/python/sdk/requirements.txt
+++ b/python/sdk/requirements.txt
@@ -15,6 +15,8 @@ python_dateutil>=2.5.3
 PyYAML>=5.4
 six>=1.10
 urllib3>=1.26
-numpy<=1.23.5  # Temporary pin numpy due to https://numpy.org/doc/stable/release/1.20.0-notes.html#numpy-1-20-0-release-notes
+numpy>=1.26.4
 caraml-auth-google==0.0.0.post14.dev0
-pydantic==2.5.3
+pydantic<2.0
+grpcio-tools==1.60.0
+grpcio==1.60.0
