--- a/python/sdk/requirements.txt
+++ b/python/sdk/requirements.txt
@@ -8,7 +8,7 @@ dataclasses-json>=0.5.2  # allow Flyte version 1.2.0 or above to import Merlin S
 docker<=6.1.3
 GitPython>=3.1.40
 google-cloud-storage>=1.19.0
-protobuf>=3.12.0,<5.0.0  # Determined by the mlflow dependency
+protobuf>=5.26.1,<6.0dev
 mlflow==1.26.1
 PyPrind>=2.11.2
 python_dateutil>=2.5.3
@@ -16,7 +16,7 @@ PyYAML>=5.4
 six>=1.10
 urllib3>=1.26
 numpy>=1.26.4
-caraml-auth-google==0.0.0.post14.dev0
+caraml-auth-google==0.0.0.post16.dev0
 pydantic<2.0
-grpcio-tools==1.60.0
-grpcio==1.60.0
+grpcio-tools==1.71.0
+grpcio==1.71.0
