--- a/python/batch-predictor/requirements.txt
+++ b/python/batch-predictor/requirements.txt
@@ -2,6 +2,6 @@ cloudpickle==2.0.0
 findspark==2.0.1
 merlin-sdk==0.0.0
 mlflow==1.26.1
-pyarrow>=0.14.1,<=17.0.0
+pyarrow==19.0.0
 pyspark==3.1.3
 setuptools<75
