feat: bump confluent-kafka to version which work with python 3.9 - 3.13

--- a/python/pyfunc-server/requirements.txt
+++ b/python/pyfunc-server/requirements.txt
@@ -1,7 +1,7 @@
 argparse>=1.4.0
 caraml-upi-protos>=0.3.4
 cloudpickle==2.0.0
-confluent-kafka==2.3.0
+confluent-kafka>=2.6.0
 grpcio-health-checking
 grpcio-reflection
 merlin-sdk==0.0.0
