--- a/python/sdk/requirements.txt
+++ b/python/sdk/requirements.txt
@@ -8,7 +8,7 @@ dataclasses-json>=0.5.2  # allow Flyte version 1.2.0 or above to import Merlin S
 docker<=6.1.3
 GitPython>=3.1.40
 google-cloud-storage>=1.19.0
-protobuf>=5.26.1,<6.0dev
+protobuf>=4.21.6,<5
 mlflow==1.26.1
 PyPrind>=2.11.2
 python_dateutil>=2.5.3
