--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -103,6 +103,8 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
+    needs:
+      - publish-python-sdk
     steps:
       - uses: actions/checkout@v4
       - name: Log in to the Container registry
@@ -111,9 +113,6 @@ jobs:
           registry: ${{ env.DOCKER_REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Install dependencies
-        working-directory: ./python/sdk
-        run: pip install "setuptools>=64,<75" "setuptools_scm>=8" "twine" "wheel"
       - name: Build Merlin SDK Docker py${{ matrix.python-version }}
         env:
           CONTAINER_REGISTRY: ${{ env.DOCKER_REGISTRY }}/${{ github.repository }}
