--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -81,6 +81,7 @@ jobs:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
     env:
       PIPENV_DEFAULT_PYTHON_VERSION: ${{ matrix.python-version }}
+      PIPENV_VENV_IN_PROJECT: true
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
