chore: install rust to allow building pydantic-core wheel manually from CI

--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -54,6 +54,8 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
       - uses: actions/cache@v4
         with:
           path: ~/.cache/pip
