--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "dagre-d3-react": "^0.2.4",
     "js-yaml": "^4.1.0",
     "moment": "^2.30.1",
+    "mustache": "^4.2.0",
     "object-assign-deep": "^0.4.0",
     "proper-url-join": "^2.1.1",
     "react": "^18.3.1",
