Add alert path prefix as configuration field

--- a/api/config/testdata/base-configs-1.yaml
+++ b/api/config/testdata/base-configs-1.yaml
@@ -115,8 +115,9 @@ FeatureToggleConfig:
       BaseURL: https://test.io/
       DashboardRepository: dashboards/merlin
       DashboardBranch: master
-      AlertRepository: alerts/merlin
+      AlertRepository: alerts_repository/merlin
       AlertBranch: master
+      AlertPathPrefix: alerts/merlin
     WardenConfig:
       APIHost: https://test.io/
   ModelDeletionConfig:
