--- a/python/observation-publisher/requirements.txt
+++ b/python/observation-publisher/requirements.txt
@@ -30,7 +30,7 @@ botocore==1.35.39
     #   s3transfer
 cachetools==5.3.2
     # via google-auth
-caraml-auth-google==0.0.0.post16.dev0
+caraml-auth-google==0.0.0.post9
     # via merlin-sdk
 caraml-upi-protos==1.0.0
     # via
