--- a/python/observation-publisher/requirements.txt
+++ b/python/observation-publisher/requirements.txt
@@ -30,7 +30,7 @@ botocore==1.35.39
     #   s3transfer
 cachetools==5.3.2
     # via google-auth
-caraml-auth-google==0.0.0.post7
+caraml-auth-google==0.0.0.post9
     # via merlin-sdk
 caraml-upi-protos==1.0.0
     # via
@@ -112,9 +112,13 @@ googleapis-common-protos==1.62.0
     #   caraml-upi-protos
     #   google-api-core
 grpcio==1.60.1
-    # via grpcio-tools
+    # via
+    #   grpcio-tools
+    #   merlin-sdk
 grpcio-tools==1.60.1
-    # via caraml-upi-protos
+    # via
+    #   caraml-upi-protos
+    #   merlin-sdk
 gunicorn==21.2.0
     # via mlflow
 hydra-core==1.3.2
@@ -150,7 +154,7 @@ mlflow==1.26.1
     # via merlin-sdk
 mypy-extensions==1.0.0
     # via typing-inspect
-numpy==1.23.5
+numpy==1.26.4
     # via
     #   merlin-sdk
     #   mlflow
@@ -189,7 +193,9 @@ protobuf==4.25.3
     #   merlin-sdk
     #   mlflow
 pyarrow==15.0.0
-    # via arize
+    # via
+    #   arize
+    #   pyodps
 pyasn1==0.5.1
     # via
     #   pyasn1-modules
@@ -204,6 +210,8 @@ pygments==2.17.2
     # via rich
 pyjwt==2.8.0
     # via databricks-cli
+pyodps==0.12.2
+    # via -r requirements.in
 pyprind==2.11.3
     # via merlin-sdk
 python-dateutil==2.8.2
@@ -236,6 +244,7 @@ requests==2.31.0
     #   google-cloud-bigquery
     #   google-cloud-storage
     #   mlflow
+    #   pyodps
     #   requests-futures
 requests-futures==1.0.0
     # via arize
@@ -275,7 +284,6 @@ typing-extensions==4.9.0
     #   alembic
     #   pydantic
     #   pydantic-core
-    #   sqlalchemy
     #   typing-inspect
 typing-inspect==0.9.0
     # via dataclasses-json
@@ -294,7 +302,6 @@ werkzeug==3.0.1
     # via flask
 zipp==3.17.0
     # via importlib-metadata
-pyodps==0.12.2
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
