--- a/python/observation-publisher/requirements.txt
+++ b/python/observation-publisher/requirements.txt
@@ -6,302 +6,79 @@
 #
 -e file:../sdk
     # via -r requirements.in
-alembic==1.13.1
-    # via mlflow
-annotated-types==0.6.0
-    # via pydantic
 antlr4-python3-runtime==4.9.3
     # via
     #   hydra-core
     #   omegaconf
 arize==7.10.2
     # via -r requirements.in
-arrow==1.3.0
-    # via cookiecutter
-binaryornot==0.4.4
-    # via cookiecutter
-blinker==1.7.0
-    # via flask
-boto3==1.35.39
-    # via merlin-sdk
-botocore==1.35.39
-    # via
-    #   boto3
-    #   s3transfer
-cachetools==5.3.2
-    # via google-auth
-caraml-auth-google==0.0.0.post9
-    # via merlin-sdk
 caraml-upi-protos==1.0.0
-    # via
-    #   -r requirements.in
-    #   merlin-sdk
+    # via -r requirements.in
 certifi==2024.2.2
-    # via
-    #   merlin-sdk
-    #   requests
-chardet==5.2.0
-    # via binaryornot
+    # via requests
 charset-normalizer==3.3.2
     # via requests
-click==8.1.3
-    # via
-    #   cookiecutter
-    #   databricks-cli
-    #   flask
-    #   merlin-sdk
-    #   mlflow
-cloudpickle==2.0.0
-    # via
-    #   merlin-sdk
-    #   mlflow
 confluent-kafka==2.3.0
     # via -r requirements.in
-cookiecutter==2.5.0
-    # via merlin-sdk
-databricks-cli==0.18.0
-    # via mlflow
-dataclasses-json==0.6.4
-    # via merlin-sdk
-docker==6.1.3
-    # via
-    #   merlin-sdk
-    #   mlflow
-entrypoints==0.4
-    # via mlflow
-flask==3.0.2
-    # via
-    #   mlflow
-    #   prometheus-flask-exporter
-gitdb==4.0.11
-    # via gitpython
-gitpython==3.1.42
-    # via
-    #   merlin-sdk
-    #   mlflow
-google-api-core==2.17.1
-    # via
-    #   google-cloud-bigquery
-    #   google-cloud-core
-    #   google-cloud-storage
-google-auth==2.28.0
-    # via
-    #   caraml-auth-google
-    #   google-api-core
-    #   google-cloud-core
-    #   google-cloud-storage
-google-cloud-bigquery==3.17.2
-    # via -r requirements.in
-google-cloud-core==2.4.1
-    # via
-    #   google-cloud-bigquery
-    #   google-cloud-storage
-google-cloud-storage==2.14.0
-    # via merlin-sdk
-google-crc32c==1.5.0
-    # via
-    #   google-cloud-storage
-    #   google-resumable-media
-google-resumable-media==2.7.0
-    # via
-    #   google-cloud-bigquery
-    #   google-cloud-storage
 googleapis-common-protos==1.62.0
     # via
     #   arize
     #   caraml-upi-protos
-    #   google-api-core
 grpcio==1.60.1
-    # via
-    #   grpcio-tools
-    #   merlin-sdk
+    # via grpcio-tools
 grpcio-tools==1.60.1
-    # via
-    #   caraml-upi-protos
-    #   merlin-sdk
-gunicorn==21.2.0
-    # via mlflow
+    # via caraml-upi-protos
 hydra-core==1.3.2
     # via -r requirements.in
 idna==3.6
     # via requests
-importlib-metadata==7.0.1
-    # via mlflow
-itsdangerous==2.1.2
-    # via flask
-jinja2==3.1.3
-    # via
-    #   cookiecutter
-    #   flask
-jmespath==1.0.1
-    # via
-    #   boto3
-    #   botocore
-mako==1.3.2
-    # via alembic
-markdown-it-py==3.0.0
-    # via rich
-markupsafe==2.1.5
-    # via
-    #   jinja2
-    #   mako
-    #   werkzeug
-marshmallow==3.20.2
-    # via dataclasses-json
-mdurl==0.1.2
-    # via markdown-it-py
-mlflow==1.26.1
-    # via merlin-sdk
-mypy-extensions==1.0.0
-    # via typing-inspect
 numpy==1.26.4
     # via
-    #   merlin-sdk
-    #   mlflow
     #   pandas
     #   pyarrow
-    #   scipy
-oauthlib==3.2.2
-    # via databricks-cli
 omegaconf==2.3.0
     # via hydra-core
 packaging==23.2
-    # via
-    #   docker
-    #   google-cloud-bigquery
-    #   gunicorn
-    #   hydra-core
-    #   marshmallow
-    #   mlflow
+    # via hydra-core
 pandas==2.2.0
     # via
     #   -r requirements.in
     #   arize
-    #   mlflow
 prometheus-client==0.20.0
-    # via
-    #   -r requirements.in
-    #   prometheus-flask-exporter
-prometheus-flask-exporter==0.23.0
-    # via mlflow
+    # via -r requirements.in
 protobuf==4.25.3
     # via
     #   arize
-    #   google-api-core
     #   googleapis-common-protos
     #   grpcio-tools
-    #   merlin-sdk
-    #   mlflow
 pyarrow==15.0.0
     # via
     #   arize
     #   pyodps
-pyasn1==0.5.1
-    # via
-    #   pyasn1-modules
-    #   rsa
-pyasn1-modules==0.3.0
-    # via google-auth
-pydantic==2.5.3
-    # via merlin-sdk
-pydantic-core==2.14.6
-    # via pydantic
-pygments==2.17.2
-    # via rich
-pyjwt==2.8.0
-    # via databricks-cli
 pyodps==0.12.2
     # via -r requirements.in
-pyprind==2.11.3
-    # via merlin-sdk
 python-dateutil==2.8.2
-    # via
-    #   arrow
-    #   botocore
-    #   google-cloud-bigquery
-    #   merlin-sdk
-    #   pandas
-python-slugify==8.0.4
-    # via cookiecutter
+    # via pandas
 pytz==2022.7.1
-    # via
-    #   mlflow
-    #   pandas
+    # via pandas
 pyyaml==6.0.1
-    # via
-    #   cookiecutter
-    #   merlin-sdk
-    #   mlflow
-    #   omegaconf
-querystring-parser==1.2.4
-    # via mlflow
+    # via omegaconf
 requests==2.31.0
     # via
-    #   cookiecutter
-    #   databricks-cli
-    #   docker
-    #   google-api-core
-    #   google-cloud-bigquery
-    #   google-cloud-storage
-    #   mlflow
     #   pyodps
     #   requests-futures
 requests-futures==1.0.0
     # via arize
-rich==13.7.0
-    # via cookiecutter
-rsa==4.9
-    # via google-auth
-s3transfer==0.10.0
-    # via boto3
-scipy==1.12.0
-    # via mlflow
 six==1.16.0
-    # via
-    #   databricks-cli
-    #   merlin-sdk
-    #   python-dateutil
-    #   querystring-parser
-smmap==5.0.1
-    # via gitdb
-sqlalchemy==1.4.54
-    # via
-    #   alembic
-    #   mlflow
-sqlparse==0.4.4
-    # via mlflow
-tabulate==0.9.0
-    # via databricks-cli
-text-unidecode==1.3
-    # via python-slugify
+    # via python-dateutil
 tqdm==4.66.2
     # via arize
-types-python-dateutil==2.8.19.20240106
-    # via arrow
 typing-extensions==4.9.0
-    # via
-    #   -r requirements.in
-    #   alembic
-    #   pydantic
-    #   pydantic-core
-    #   typing-inspect
-typing-inspect==0.9.0
-    # via dataclasses-json
+    # via -r requirements.in
 tzdata==2024.1
     # via pandas
 urllib3==2.0.7
-    # via
-    #   botocore
-    #   databricks-cli
-    #   docker
-    #   merlin-sdk
-    #   requests
-websocket-client==1.7.0
-    # via docker
-werkzeug==3.0.1
-    # via flask
-zipp==3.17.0
-    # via importlib-metadata
+    # via requests
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
